[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
logger = "0.4.0"
serde = { version = "1.0.153", features = ["serde_derive"] }
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread", "process"] }
tokio-stream = { version = "0.1.12", features = ["io-util"] }
anyhow = "1.0.70"
thiserror = "1.0.39"
uuid = { version = "1.3.1", features = ["v4"] }
serde_json = "1.0.95"
chrono = { version = "0.4.24", features = ["serde"] }
