[package]
name = "dynconf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
snailquote = "0.3.1"
anyhow = "1.0.75"
async-trait = "0.1.73"

serde_json = { version = "1.0.105", optional = true }
serde_yaml = { version = "0.9.25", optional = true }
tokio = { version = "1.32.0", features = ["fs"], optional = true }
serde = { version = "1.0.188", features = ["derive"], optional = true }
futures = "0.3.28"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["fs", "macros", "rt"] }

[features]
default = ["yaml", "json", "io"]
yaml = ["dep:serde_yaml", "dep:serde"]
json = ["dep:serde_json", "dep:serde"]
io = ["dep:tokio"]
