[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
logger = "0.4.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.153", features = ["serde_derive"] }
thiserror = "1.0.39"
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread", "process"] }
warp = "0.3.3"
common = { path = "../common" }
serde_yaml = "0.9.19"
git2 = "0.16.1"
anyhow = "1.0.70"
