[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
logger = "0.4.0"
pretty_env_logger = "0.4.0"
thiserror = "1.0.39"
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread", "process"] }
warp = "0.3.3"
common = { path = "../common" }
worker_lib = { path = "../worker_lib" }
runner_lib = { path = "../runner_lib" }
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
reqwest = { version = "0.11.15", features = ["json"] }
tokio-stream = "0.1.12"
futures = "0.3.27"
