[package]
name = "runner_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
serde = "1.0.164"
models = { path = "../models" }
anyhow = "1.0.71"
serde_json = "1.0.96"
log = "0.4.19"
