[package]
name = "runner_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
logger = "0.4.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.153", features = ["serde_derive"] }
thiserror = "1.0.39"
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread", "process"] }
common = { path = "../common" }
worker_lib = { path = "../worker_lib" }
serde_yaml = "0.9.19"
anyhow = "1.0.70"
futures = "0.3.27"
reqwest = { version = "0.11.15", features = ["json"] }
async-trait = "0.1.68"
regex = "1.7.3"
tokio-stream = "0.1.12"
tokio-tar = "0.3.0"
