[package]
name = "uci_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.1"
reqwest = { version = "0.11.16", features = ["json"] }
termion = "2.0.1"
tokio = { version = "1.27.0", features = ["process"] }
