[package]
name = "uci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.21"
simplelog = "0.12.1"
termion = "2.0.1"
tokio = { version = "1.27.0", features = ["process", "macros", "fs"] }
common = { path = "../common" }
thiserror = "1.0.40"
tokio-tungstenite = "0.18.0"
futures-util = { version = "0.3.28", features = ["sink"] }
serde_json = "1.0.95"
futures = "0.3.28"
ctrlc = "3.2.5"
