[package]
name = "uci_webgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
leptos = "0.3.0"
reqwest = "0.11.18"
serde = "1.0.164"
models = { path = "../models" }
runner_client = { path = "../runner_client" }