[package]
name = "uci_webgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
leptos = { version = "0.4.3", features = ["csr", "nightly"] }
reqwest = "0.11.18"
serde = "1.0.164"
models = { path = "../models" }
runner_client = { path = "../runner_client" }
gloo-storage = "0.2.2"
leptos_router = { version = "0.4.3", features = ["csr", "nightly"] }
web-sys = { version = "0.3.64", features = ["Window", "MediaQueryList"] }
serde_json = "1.0.103"
ws_stream_wasm = "0.7.4"
futures-util = "0.3.28"
chrono = "0.4.26"
