[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
log = "0.4.17"
logger = "0.4.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.153", features = ["serde_derive"] }
thiserror = "1.0.39"
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread", "process", "io-util"] }
warp = "0.3.3"
common = { path = "../common" }
futures = "0.3.26"
tokio-util = { version = "0.7.7", features = ["codec"] }
tokio-stream = { version = "0.1.12", features = ["io-util"] }
uuid = { version = "1.3.0", features = ["v4"] }
tar = "0.4.38"
clap = { version = "4.1.11", features = ["derive"] }
