[package]
name = "worker_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
log = "0.4.17"
thiserror = "1.0.39"
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread", "process", "io-util", "fs"] }
common = { path = "../common" }
futures = "0.3.26"
tokio-util = { version = "0.7.7", features = ["codec"] }
tokio-stream = { version = "0.1.12", features = ["io-util"] }
uuid = { version = "1.3.0", features = ["v4"] }
tar = "0.4.38"
reqwest = { version = "0.11.15", features = ["json"] }
anyhow = "1.0.70"
async-trait = "0.1.68"
derive_builder = "0.12.0"
hyper = "0.14.25"
chrono = "0.4.24"